--- a/public/index.html
+++ b/public/index.html
@@ -112,30 +112,20 @@
       <div class="px-4 pt-2">
         <div class="flex text-xs mb-2 border-b border-slate-800">
           <button
-            class="tab-btn py-2 px-3 -mb-px border-b-2 border-transparent text-slate-500"
-            data-tab="session">
-            Session
-          </button>
-          <button
             class="tab-btn py-2 px-3 -mb-px border-b-2 border-indigo-500 text-slate-100"
             data-tab="music">
             Music
           </button>
           <button
             class="tab-btn py-2 px-3 -mb-px border-b-2 border-transparent text-slate-500"
-            data-tab="fun">
-            Fun
+            data-tab="chat">
+            Chat
           </button>
         </div>
       </div>
 
       <!-- Tab content -->
       <div class="px-4 pb-3">
-        <!-- Session (placeholder) -->
-        <div id="tab-session" class="hidden text-xs text-slate-400 py-4">
-          Session info and controls will go here later.
-        </div>
-
         <!-- Music tab -->
         <div id="tab-music" class="block">
           <!-- Search bar -->
@@ -171,27 +161,14 @@
           </div>
         </div>
 
-        <!-- Fun tab -> Chat UI -->
-        <div id="tab-fun" class="hidden py-4">
-          <!-- Chat / Spatial toggle -->
-          <div class="flex text-xs mb-3 bg-slate-900/80 rounded-full p-1">
-            <button id="funTabChat"
-                    class="flex-1 py-1.5 rounded-full bg-slate-800 text-slate-100 text-xs font-semibold">
-              Chat
-            </button>
-            <button id="funTabSpatial"
-                    class="flex-1 py-1.5 rounded-full text-slate-500 text-xs font-semibold">
-              Spatial
-            </button>
-          </div>
-
-          <!-- Messages -->
+        <!-- Chat tab – full-screen style (no player) -->
+        <div id="tab-chat" class="hidden py-2">
           <div id="chatEmpty" class="text-center text-slate-500 text-[11px] py-6">
             No messages yet<br />Start the conversation.
           </div>
 
           <div id="chatMessages"
-               class="hidden flex flex-col gap-2 text-xs text-slate-100 max-h-56 overflow-y-auto pb-2"></div>
+               class="hidden flex flex-col gap-2 text-xs text-slate-100 max-h-80 overflow-y-auto pb-2"></div>
 
           <!-- Input -->
           <div class="mt-3">
@@ -210,8 +187,8 @@
         </div>
       </div>
 
-      <!-- Bottom player area -->
-      <div class="border-t border-slate-800 px-4 pt-2 pb-3">
+      <!-- Bottom player area (hide when chat tab active) -->
+      <div id="playerPanel" class="border-t border-slate-800 px-4 pt-2 pb-3">
         <div class="mb-2">
           <label class="block text-[11px] text-slate-500 mb-1">
             Track URL (MP3 / stream) – host only
