--- a/public/player.html
+++ b/public/player.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    .fade-in { animation: fadeIn .35s ease both; }
+    .fade-in { animation: fadeIn .28s ease both; }
     @keyframes fadeIn { from {opacity:0; transform: translateY(6px)} to {opacity:1; transform:none} }
+    /* make the chat input stand out on mobile */
+    #chatFull .chat-footer { box-shadow: 0 -6px 18px rgba(2,6,23,0.6); }
   </style>
 </head>
 <body class="min-h-screen bg-gradient-to-b from-slate-900 to-black text-slate-100">
@@ -25,39 +27,53 @@
       </div>
     </header>
 
+    <!-- search bar moved to top (page-wide) -->
+    <div class="mb-4">
+      <div class="bg-slate-900 rounded-xl p-3 flex gap-3 items-center">
+        <input id="searchPro" placeholder="Search YouTube (Indian music) ..." class="flex-1 rounded-full bg-slate-800 px-4 py-2 outline-none" />
+        <button id="btnSearch" class="px-4 py-2 rounded-full bg-indigo-600">Search</button>
+      </div>
+    </div>
+
     <main id="mainGrid" class="grid grid-cols-1 md:grid-cols-3 gap-6">
       <!-- Player & playlist -->
-      <section class="md:col-span-2">
-        <div class="bg-slate-800 rounded-2xl p-5 mb-4 fade-in">
+      <section id="musicSection" class="md:col-span-2">
+        <div class="bg-slate-800 rounded-2xl p-4 fade-in">
           <div class="flex items-center gap-4">
-            <div id="cover" class="w-28 h-28 bg-slate-700 rounded-lg flex items-center justify-center text-4xl">▶︎</div>
+            <div id="cover" class="w-20 h-20 bg-slate-700 rounded-lg flex items-center justify-center text-3xl">▶︎</div>
             <div class="flex-1">
-              <div id="title" class="text-xl font-semibold">No track</div>
+              <div id="title" class="text-lg font-semibold">No track</div>
               <div id="artist" class="text-sm text-slate-400">—</div>
             </div>
-            <div class="flex flex-col items-center gap-2">
-              <div class="flex items-center gap-2">
-                <button id="prev" class="px-3 py-2 rounded-md bg-slate-700">⏮</button>
-                <button id="playBig" class="w-14 h-14 rounded-full bg-white text-black flex items-center justify-center text-xl shadow">▶</button>
-                <button id="next" class="px-3 py-2 rounded-md bg-slate-700">⏭</button>
-              </div>
-              <div class="mt-2 text-sm text-slate-400">Host controls only</div>
+
+            <!-- minimal host indicator area -->
+            <div class="text-xs text-slate-400">
+              <div id="hostNote">Host controls</div>
             </div>
           </div>
 
           <div class="mt-4">
+            <!-- YouTube iframe container -->
             <div id="ytPlayer" class="w-full h-56 bg-black rounded-md overflow-hidden"></div>
-            <div class="mt-3">
-              <input id="seek" type="range" min="0" max="100" value="0" class="w-full" />
-              <div class="flex justify-between text-xs text-slate-400 mt-1">
-                <span id="curT">00:00</span>
-                <span id="durT">00:00</span>
+
+            <div class="mt-3 flex items-center gap-3">
+              <!-- Minimal playback controls (visible only to host) -->
+              <button id="playBig" class="px-3 py-2 rounded-full bg-white text-black font-semibold">Play</button>
+              <button id="prev" class="px-3 py-2 rounded-md bg-slate-700">Prev</button>
+              <button id="next" class="px-3 py-2 rounded-md bg-slate-700">Next</button>
+
+              <div class="flex-1">
+                <input id="seek" type="range" min="0" max="100" value="0" class="w-full" />
+                <div class="flex justify-between text-xs text-slate-400 mt-1">
+                  <span id="curT">00:00</span>
+                  <span id="durT">00:00</span>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="bg-slate-900 rounded-2xl p-3">
+        <div class="bg-slate-900 rounded-2xl p-3 mt-4">
           <div class="flex items-center justify-between mb-2">
             <div class="font-semibold">Playlist</div>
             <div class="text-xs text-slate-400">Auto play order</div>
@@ -66,14 +82,10 @@
         </div>
       </section>
 
-      <!-- search & results -->
+      <!-- search results (right column) -->
       <aside>
         <div class="bg-slate-900 rounded-2xl p-4 mb-4">
-          <div class="flex items-center gap-2 mb-3">
-            <input id="searchPro" placeholder="Search YouTube (Indian music) ..." class="flex-1 rounded-full bg-slate-800 px-3 py-2 outline-none" />
-            <button id="btnSearch" class="px-3 py-2 rounded-full bg-indigo-600">Search</button>
-          </div>
-          <div id="resultsBox" class="space-y-2 max-h-72 overflow-auto"></div>
+          <div id="resultsBox" class="space-y-2 max-h-96 overflow-auto"></div>
         </div>
 
         <div id="chatMini" class="bg-slate-900 rounded-2xl p-4 hidden">
@@ -85,9 +97,12 @@
       <section id="chatFull" class="col-span-full hidden">
         <div class="bg-slate-900 rounded-2xl p-4 h-[70vh] flex flex-col">
           <div id="chatWindow" class="flex-1 overflow-auto space-y-3 pb-3"></div>
-          <div class="mt-3 flex items-center gap-3">
-            <input id="msgInput" type="text" placeholder="Message..." class="flex-1 rounded-full bg-slate-800 px-4 py-2" />
+
+          <!-- chat footer always visible in chatFull -->
+          <div class="chat-footer mt-3 flex items-center gap-3">
+            <input id="msgInput" type="text" placeholder="Message..." class="flex-1 rounded-full bg-slate-800 px-4 py-3" />
             <button id="btnSend" class="w-12 h-12 rounded-full bg-indigo-600 flex items-center justify-center text-white">
+              <!-- send icon -->
               <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M22 2L11 13"></path>
                 <path d="M22 2L15 22L11 13L2 9L22 2Z" />
@@ -105,7 +120,6 @@
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <!-- YouTube IFrame API (loads asynchronously) -->
   <script src="https://www.youtube.com/iframe_api"></script>
   <script src="player.js"></script>
 </body>
